compiler/e2e/test/snapshot/borrow_checker/return_invalidated_universal_regions_2/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: access is done while it is mutably borrowed
   ╭─ compiler/e2e/test/snapshot/borrow_checker/return_invalidated_universal_regions_2/main.pnx:27:9
   │
24 │     vector.push(number)
   │                 ------ the mutable borrow starts here
   ·
27 │     return number
   │            ^^^^^^ access occurs here while it is mutably borrowed
   │
   = lifetime(s) 'a, 'b can access the borrow later

error: Compilation aborted due to 1 error(s)



stdout:
